--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,8 @@
 [app]
 address = "0.0.0.0:9000"
-admin_user = "admin"
-admin_password = "secretAdminPwd"
+admin_username = "admin"
+admin_password = "admin"
+root_url = "https://your-listmonk-service-name.onrender.com"
 
 [db]
-host = "db"
-port = 5432
-user = "listmonk"
-password = "listmonk"
-database = "listmonk"
-ssl_mode = "disable"
-max_open = 25
-max_idle = 25
-max_lifetime = "300s"
-
+dsn = "postgresql://admin:wZxn1EdcMjxMWNMPEVV3DJhwjsuStqxj@dpg-d1j5h6ndiees73cltk00-a/listmonkdb"
